# rock-paper-scissors

./: README.md  pyproject.toml  tox.ini
rps/: rps.py
tests/: test_rps.py
