[tool.poetry]
name = "rps"
version = "0.1.0"
description = "Python implementation of the popular rock paper scissors game"

license = "MIT"

authors = [
    "Benjamin"
]

readme = 'README.md'
keywords = ['rock-paper-scissors', 'python game']

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
tox = "^3.24.4"
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
